src/objects/Success_Student_Pod_Association__c.object
<CustomObject>
    <description>Create a Many-To-Many relationship between Success_Student__c and Success_Pod__c</description>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Primary SSPA for the given success student’s cases based on primary program plan.</description>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Success_Committee__c</fullName>
        <description>Success Committee</description>
        <formula>Success_Pod__r.Committee__c</formula>
        <label>Success Committee</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Success_Pod__c</fullName>
        <description>The success pod to associate a student</description>
        <label>Success Pod</label>
        <referenceTo>Success_Pod__c</referenceTo>
        <relationshipLabel>Success Student Pod Associations</relationshipLabel>
        <relationshipName>Success_Student_Pod_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Success_Student_Name__c</fullName>
        <description>Success Student Name</description>
        <formula>Success_Student__r.Student_Name__c</formula>
        <label>Success Student Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Success_Student__c</fullName>
        <description>The Success Student that is being associated to a success Pod</description>
        <label>Success Student</label>
        <referenceTo>Success_Student__c</referenceTo>
        <relationshipLabel>Success Student Pod Associations</relationshipLabel>
        <relationshipName>Success_Student_Pod_Associations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Success Student Pod Association</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Primary__c</columns>
        <columns>Success_Committee__c</columns>
        <columns>Success_Pod__c</columns>
        <columns>Success_Student__c</columns>
        <columns>Success_Student_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SSPA-{0}</displayFormat>
        <label>Success Student Pod Association Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Success Student Pod Associations</pluralLabel>
    <recordTypes>
        <fullName>Advisor</fullName>
        <active>true</active>
        <description>Advisor Record type</description>
        <label>Advisor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Coach</fullName>
        <active>true</active>
        <description>Coach Record Type</description>
        <label>Coach</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>